[gd_scene load_steps=34 format=3 uid="uid://cnr73mjv4kkc5"]

[ext_resource type="Script" uid="uid://eg5dtpc3rwt4" path="res://scripts/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://6jytcxmquob5" path="res://assets/sprites/handmade/knight_2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c1owhtksqe7i1" path="res://assets/sprites/handmade/knight_1.png" id="3"]
[ext_resource type="AudioStream" uid="uid://r6ra2dlrfl06" path="res://assets/sounds/sfx/sfx_step3.mp3" id="4"]
[ext_resource type="AudioStream" uid="uid://d362wmjekpky6" path="res://assets/sounds/sfx/sfx_jump2.wav" id="5"]
[ext_resource type="AudioStream" uid="uid://hlia0xb2b0f2" path="res://assets/sounds/sfx/sfx_landed2.wav" id="6"]
[ext_resource type="AudioStream" uid="uid://dfikpwb1r5fbc" path="res://assets/sounds/sfx/sfx_death2.wav" id="7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kh5vq"]
radius = 6.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7hggg"]
atlas = ExtResource("2")
region = Rect2(0, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvhpt"]
atlas = ExtResource("2")
region = Rect2(22, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuvph"]
atlas = ExtResource("2")
region = Rect2(44, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd612"]
atlas = ExtResource("2")
region = Rect2(66, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo486"]
atlas = ExtResource("2")
region = Rect2(88, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_57mfs"]
atlas = ExtResource("2")
region = Rect2(110, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_acu80"]
atlas = ExtResource("2")
region = Rect2(132, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5mqa"]
atlas = ExtResource("2")
region = Rect2(154, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhirg"]
atlas = ExtResource("2")
region = Rect2(176, 57, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_my8ss"]
atlas = ExtResource("3")
region = Rect2(0, 38, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iddb"]
atlas = ExtResource("3")
region = Rect2(18, 38, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_en2qo"]
atlas = ExtResource("3")
region = Rect2(36, 38, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1s0h"]
atlas = ExtResource("3")
region = Rect2(54, 38, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5re8m"]
atlas = ExtResource("3")
region = Rect2(72, 38, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2en4r"]
atlas = ExtResource("3")
region = Rect2(0, 19, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_8eoa0"]
atlas = ExtResource("3")
region = Rect2(18, 19, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3x1m7"]
atlas = ExtResource("3")
region = Rect2(36, 19, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dbem"]
atlas = ExtResource("3")
region = Rect2(54, 19, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_xeh2k"]
atlas = ExtResource("2")
region = Rect2(0, 0, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_hot8y"]
atlas = ExtResource("2")
region = Rect2(22, 0, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_odlrx"]
atlas = ExtResource("2")
region = Rect2(44, 0, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ttjx"]
atlas = ExtResource("2")
region = Rect2(66, 0, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xemp"]
atlas = ExtResource("2")
region = Rect2(88, 0, 22, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ls1s"]
atlas = ExtResource("2")
region = Rect2(110, 0, 22, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_im62a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hggg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvhpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuvph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd612")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo486")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57mfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acu80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5mqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhirg")
}],
"loop": false,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_my8ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iddb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en2qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1s0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5re8m")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2en4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8eoa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3x1m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dbem")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xeh2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hot8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odlrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ttjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xemp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ls1s")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[node name="player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 3
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 10
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_kh5vq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -9)
sprite_frames = SubResource("SpriteFrames_im62a")
animation = &"run"
autoplay = "idle"
frame = 4
frame_progress = 0.6874

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, 54.845)
zoom = Vector2(4, 4)
limit_bottom = 45
limit_smoothed = true
position_smoothing_enabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ASP_Walking" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
volume_db = -5.0
bus = &"SFX"

[node name="ASP_Jumping" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")
volume_db = -6.0
bus = &"SFX"

[node name="ASP_Landed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6")
volume_db = -5.0
bus = &"SFX"

[node name="ASP_Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7")
bus = &"SFX"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
